[gd_scene load_steps=28 format=3 uid="uid://ctt2ej2xb6ma5"]

[ext_resource type="Texture2D" uid="uid://bq4dlnfc38302" path="res://Assets/Enemies/Mushroom/Hit.png" id="1_0qbwq"]
[ext_resource type="Script" path="res://Scripts/mushroom.gd" id="1_suvow"]
[ext_resource type="Texture2D" uid="uid://cmcmrek8xr5gs" path="res://Assets/Enemies/Mushroom/Run (32x32).png" id="3_4jaxp"]
[ext_resource type="PackedScene" uid="uid://cn165das2mt5b" path="res://Scenes/head_hit.tscn" id="4_c5ysu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wavdy"]
atlas = ExtResource("1_0qbwq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5atm"]
atlas = ExtResource("1_0qbwq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yydiq"]
atlas = ExtResource("1_0qbwq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8jov"]
atlas = ExtResource("1_0qbwq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3t8o"]
atlas = ExtResource("1_0qbwq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbmgd"]
atlas = ExtResource("3_4jaxp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_np4qm"]
atlas = ExtResource("3_4jaxp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8q8f"]
atlas = ExtResource("3_4jaxp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgdap"]
atlas = ExtResource("3_4jaxp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qw4l"]
atlas = ExtResource("3_4jaxp")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m14mj"]
atlas = ExtResource("3_4jaxp")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdpgh"]
atlas = ExtResource("3_4jaxp")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_avjwk"]
atlas = ExtResource("3_4jaxp")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_va8jf"]
atlas = ExtResource("3_4jaxp")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbwwv"]
atlas = ExtResource("3_4jaxp")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_okcs0"]
atlas = ExtResource("3_4jaxp")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeinp"]
atlas = ExtResource("3_4jaxp")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b0n7"]
atlas = ExtResource("3_4jaxp")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r3j4"]
atlas = ExtResource("3_4jaxp")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wnyx"]
atlas = ExtResource("3_4jaxp")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj60g"]
atlas = ExtResource("3_4jaxp")
region = Rect2(480, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cbsjo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wavdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5atm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yydiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8jov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3t8o")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbmgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np4qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8q8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgdap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qw4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m14mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdpgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avjwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbwwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okcs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeinp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b0n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r3j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wnyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj60g")
}],
"loop": true,
"name": &"Run",
"speed": 17.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0hln"]
size = Vector2(26, 12)

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_suvow")

[node name="Animacao" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_cbsjo")
animation = &"Run"
autoplay = "Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_k0hln")

[node name="InverteDirecao" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-15, 0)
collision_mask = 2
collide_with_areas = true

[node name="AumentaVelocidade" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-81, 0)
collide_with_areas = true

[node name="HeadHit" parent="." instance=ExtResource("4_c5ysu")]
position = Vector2(-8, 0)

[connection signal="animation_finished" from="Animacao" to="." method="_on_animacao_animation_finished"]
